Flujos Alternos 2.2.1 al 2.2.4✔
Calendario dinamico por turnos, lista interactiva de servicios extras con recalculo de total y creacion de nuevos servicios al catalogo.